--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,17 @@
     </properties>
 
     <dependencies>
-         <!-- Servlet API for compilation -->
-    <dependency>
-    <groupId>jakarta.servlet</groupId>
-    <artifactId>jakarta.servlet-api</artifactId>
-    <version>6.0.0</version> <!-- Compatible with Tomcat 11 -->
-    <scope>provided</scope>
-</dependency>
-
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.0.0</version> <!-- Compatible with Tomcat 11 -->
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.43.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
