--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,15 @@
     <build>
     <finalName>hotel-reservation</finalName>
     <plugins>
+        <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>3.2.5</version>
+  <configuration>
+    <forkCount>1</forkCount>
+    <reuseForks>false</reuseForks> <!-- Forces one fork per class -->
+  </configuration>
+</plugin>
         <!-- Modern and stable WAR plugin -->
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
